--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".FavoriteHistoryActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar"
+            android:label="@string/app_name">
+
+        </activity>
     </application>
 
 </manifest>
